src/sass/components/_product.scss
.product {
  .product-info {
    padding: 0 32px;
    .product-info-wrapper {
      padding: 4.5rem 0 4.5rem;
      .product-info-content {
        font-family: "Poppins";
        h1 {
          font-size: 2.5rem;
          font-weight: 700;
          line-height: 1;
          margin-bottom: 0.5rem;
        }
        h2 {
          font-size: 1.7rem;
          font-weight: 700;
          line-height: 1;
          margin-bottom: 1.5rem;
        }
        h4 {
          font-size: 0.875rem;
          margin: 0 0 1rem 0;
          line-height: 1;
        }
        p {
          font-weight: 300;
          font-size: 0.875rem;
          line-height: 1.2;
        }
        .buttons-container {
          margin-top: 2rem;
          display: flex;
          align-items: center;
          justify-content: space-between;
          button {
            height: 56px;
            padding: 0 1.5rem;
            background-color: #05d;
            background-image: linear-gradient(315deg, #4da1f0 0%, #ed11f5 100%);
            color: $white;
            border: none;
            font-size: 0.875rem;
            line-height: 1;
            border-radius: 100vw;
          }
          svg {
            margin-right: 1.5rem;
          }
        }
      }
    }
  }
  .product-wrapper {
    position: relative;
    .background {
      position: fixed;
      height: 100vh;
      width: 100%;
      background-color: #636363;
      top: 0;
      left: 0;
      bottom: 0;
      z-index: 1;
      opacity: 0;
      overflow-y: hidden;
    }
    .product-drag-header {
      width: 100%;
      box-sizing: border-box;
      display: flex;
      justify-content: space-between;
      position: fixed;
      z-index: 22;
      top: 0;
      padding: 24px 32px;
      opacity: 0;
      .company-name {
        color: $white;
        font-size: 1rem;
        font-weight: 700;
        display: flex;
        justify-content: center;
        align-items: center;
      }
      .close-button-wrapper {
        color: $white;
        font-size: 1rem;
        font-weight: 700;
        display: flex;
        align-items: center;
        justify-content: center;
      }
    }
    .product-image-wrapper {
      position: relative;
      height: 540px;
      .product-image {
        z-index: 8;
        position: absolute;
        left: 100px;
        img {
          scale: 0.9;
        }
      }
    }
    .product-drag-info {
      z-index: 99;
      position: relative;
      margin-bottom: 40px;
      .product-drag-info-wrapper {
        padding: 0 32px;
        .product-drag-info-label {
          display: flex;
          justify-content: flex-end;
          h6 {
            font-size: 0.875rem;
            margin: 0;
            margin-bottom: 1.5rem;
            display: flex;
            align-items: center;
            svg {
              margin-right: 0.75rem;
            }
          }
        }
        .product-drag-info-progress-background {
          width: 100%;
          height: 1px;
          background: rgba(66, 66, 67, 0.2);
          position: relative;
          .product-drag-info-progress {
            width: 0%;
            height: 1px;
            background-color: $blue;
            position: absolute;
            z-index: 2;
            right: 0;
          }
        }
      }
    }
  }
}

